Integrated manifest file

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/example.css" rel="stylesheet">
+    <link href="manifest.json rel="manifest">
 
     <script src="js/three.min.js"></script>
     <script src="js/blueprint3d.js"></script>
